# introduction_to_machine_learning_jp

./: README.md  pyproject.toml
articles/01_Pythonの開発環境の作り方/: 01_01-Pythonの開発環境の作り方.md
notebooks/01_パーセプトロン/: 01-01_論理演算.ipynb  01-02_パーセプトロン.ipynb  01-03_行列とベクトルの計算.ipynb  01-04_多層パーセプトロン.ipynb
notebooks/02_ニューラルネットワーク/: 行列とベクトルの計算.ipynb
notebooks/lib/perceptron/: perceptron_gates.py
