[tool.poetry]
name = "introduction_to_machine_learning_jp"
version = "0.1.0"
description = ""
authors = ["meg-ssk"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
torch = "^1.11.0"
opencv-python = "^4.6.0"
pandas = "^1.4.2"
truth-table-generator = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
